--- a/template/package.json
+++ b/template/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "vue-pages-workflow",
+  "name": "<%= name %>",
   "version": "0.1.0",
-  "description": "",
+  "description": "<%= description %>",
+  "private": <%= private %>,
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "vue"
   ],
   "author": "jiyinyiyong",
-  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+<%= github %>.git"
+  },
+  "homepage": "<%= github %>#readme",
+  <% if (author) { %>
+  "author": "<%= author %>",
+  <% } %>
+  "license": "<%= license %>",
   "devDependencies": {
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
